--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial scale=1.0">
 <title>What is my current date and time?</title>
 
-<h1>What is my current date and time?<h1>
+<h1>What is my current date and time?</h1>
 
 <center><h1><span id="time"> </span></h1></center>
 <script>
