--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial scale=1.0">
-<link rel="icon" type="image/x-icon" href="/unnamed.png?">
+<link rel="icon" type="image/x-icon" href="https://thedoggybrad.github.io/getdatetime/unnamed.png?">
 <title>What is my current date and time?</title>
 
   <center><h1>What is my current date and time?</h1></center>
