Java Script Refresh

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ const weekday = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Sa
 const d = new Date();
 let day = weekday[d.getDay()];
 document.getElementById("day").innerHTML = day;
+  setInterval(refreshTime, 1000);
 </script>
 
 </head>
