--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ document.getElementById("day").innerHTML = day;
   setInterval(refreshTime, 1000);
 </script>
 
-<center><button onclick="myFunction()">Toggle dark mode</button></center>
+<center><button onclick="myFunction()">DarkMode Switch</button></center>
 <script>
 function myFunction() {
    var element = document.body;
