--- a/index.html
+++ b/index.html
@@ -6,19 +6,43 @@
 <meta name="viewport" content="width=device-width, initial scale=1.0">
 <link rel="icon" type="image/x-icon" href="https://thedoggybrad.github.io/getdatetime/unnamed.png?">
 <title>What is my current date and time?</title>
-<style>
-body {
-  background-color: white;
-  color: black;
-}
-
-.dark-mode {
-  background-color: black;
-  color: white;
-}
-</style>
+ <meta name="color-scheme" content="dark light" />
+    <meta name="theme-color" content="" />
+    <link rel="icon" content="" />
+    <script>
+      // If `prefers-color-scheme` is not supported, fall back to light mode.
+      // In this case, light.css will be downloaded with `highest` priority.
+      if (window.matchMedia('(prefers-color-scheme)').media === 'not all') {
+        document.documentElement.style.display = 'none';
+        document.head.insertAdjacentHTML(
+          'beforeend',
+          '<link rel="stylesheet" href="light.css" onload="document.documentElement.style.display = ``">',
+        );
+      }
+    </script>
+    <link
+      rel="stylesheet"
+      href="https://thedoggybrad.github.io/getdatetime/resources/dark.css"
+      media="(prefers-color-scheme: dark)"
+    />
+    <link
+      rel="stylesheet"
+      href="https://thedoggybrad.github.io/getdatetime/resources/light.css"
+      media="(prefers-color-scheme: light)"
+    />
+    <link rel="stylesheet" href="https://thedoggybrad.github.io/getdatetime/resources/common.css" />
+    <link rel="stylesheet" href="https://thedoggybrad.github.io/getdatetime/resources/slider.css" />
+    <script type="module" src="https://thedoggybrad.github.io/getdatetime/resources/dark-mode-toggle-playground.mjs"></script>
+    <script type="module" src="https://thedoggybrad.github.io/getdatetime/resources/dark-mode-toggle.mjs"></script>
 </head>
 <body>
+   <dark-mode-toggle
+        id="dark-mode-toggle-5"
+        class="slider"
+        legend="Dark Mode"
+        appearance="toggle"
+      ></dark-mode-toggle>
+      
 <center><h1>What is my current date and time?</h1></center>
 
 <center><h1><span id="time"></span></h1></center>
@@ -56,14 +80,6 @@ const d = new Date();
 let day = weekday[d.getDay()];
 document.getElementById("day").innerHTML = day;
   setInterval(refreshTime, 1000);
-</script>
-
-<center><button onclick="myFunction()">DarkMode Switch</button></center>
-<script>
-function myFunction() {
-   var element = document.body;
-   element.classList.toggle("dark-mode");
-}
 </script>
 
 </body>
