--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         document.documentElement.style.display = 'none';
         document.head.insertAdjacentHTML(
           'beforeend',
-          '<link rel="stylesheet" href="light.css" onload="document.documentElement.style.display = ``">',
+          '<link rel="stylesheet" href="https://thedoggybrad.github.io/getdatetime/resources/light.css" onload="document.documentElement.style.display = ``">',
         );
       }
     </script>
