--- a/index.html
+++ b/index.html
@@ -82,5 +82,14 @@ document.getElementById("day").innerHTML = day;
   setInterval(refreshTime, 1000);
 </script>
 
+<br />
+<br />
+<br />
+<br />
+<br />
+<center><footer>
+  <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
+</footer></center>
+
 </body>
 </html>
