Attempt no.1 to fix the Copyright placeholder

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ document.getElementById("day").innerHTML = day;
 <br />
 <br />
 <center><footer>
-  <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
+  <p class="text-secondary">©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
 </footer></center>
 
 </body>
