--- a/index.html
+++ b/index.html
@@ -86,6 +86,31 @@ document.getElementById("day").innerHTML = day;
 <br />
 <br />
 <br />
+
+
+<style>
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0px;
+  height: 60px;
+  /* Height of the footer */
+  width: 100%;
+}
+.footer {
+  margin: 8px;
+  border: 1px solid #000000;
+  height: 50px;
+}
+.alignLeft {
+  float: left;
+}
+.alignRight {
+  float: right;
+}
+</style>
+
+
 <center><footer>
   <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
 </footer></center>
