I do belive that is the problem. Let me try that?

--- a/index.html
+++ b/index.html
@@ -87,10 +87,8 @@ document.getElementById("day").innerHTML = day;
 <br />
 <br />
 
-
 <style>
 footer {
-  position: absolute;
   bottom: 0;
   left: 0px;
   height: 60px;
@@ -102,12 +100,18 @@ footer {
   border: 1px solid #000000;
   height: 50px;
 }
+.alignLeft {
+  float: left;
+}
+.alignRight {
+  float: right;
+}
 </style>
 
 
-<center><footer>
+<footer>
   <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
-</footer></center>
+</footer>
 
 </body>
 </html>
