Returning to working but not so good to look footer

--- a/index.html
+++ b/index.html
@@ -87,32 +87,10 @@ document.getElementById("day").innerHTML = day;
 <br />
 <br />
 
-<style>
-footer {
-  bottom: 0;
-  left: 0px;
-  height: 60px;
-  position: absolute;
-  /* Height of the footer */
-  width: 100%;
-}
-.footer {
-  margin: 8px;
-  border: 1px solid #000000;
-  height: 50px;
-}
-.alignLeft {
-  float: left;
-}
-.alignRight {
-  float: right;
-}
-</style>
 
-
-<footer>
+<center><footer>
   <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
-</footer>
+</footer></center>
 
 </body>
 </html>
