--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <meta name="color-scheme" content="dark light" />
     <meta name="theme-color" content="" />
     <script>
-      // If `prefers-color-scheme` is not supported, fall back to light mode.
+      // If `prefers-color-scheme` is not supported, it will fall back to light mode.
       // In this case, light.css will be downloaded with `highest` priority.
       if (window.matchMedia('(prefers-color-scheme)').media === 'not all') {
         document.documentElement.style.display = 'none';
