Try if it will work

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         class="slider"
         legend="Dark Mode"
         appearance="toggle"
+        remember="Remember this"
       ></dark-mode-toggle>
       
 <center><h1>What is my current date and time?</h1></center>
