--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ let day = weekday[d.getDay()];
 document.getElementById("day").innerHTML = day;
   setInterval(refreshTime, 1000);
 </script>
+  <link rel="manifest" href="pwa/manifest.json">
+  <script src="pwa/service_worker_check.js"></script>
+  <script src="pwa/service_worker_main.js">
 </head>
 <body>
    <dark-mode-toggle
