Disabled Context Menu

--- a/index.html
+++ b/index.html
@@ -89,5 +89,8 @@ document.getElementById("day").innerHTML = day;
 <center><footer>
   <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
 </footer></center>
+<script>
+window.addEventListener("contextmenu", e => e.preventDefault());
+</script>
 </body>
 </html>
