Disable Text Selection

--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@ document.getElementById("day").innerHTML = day;
 <center><footer>
   <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
 </footer></center>
+
+<style>
+* {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
+}
+</style>
+
 <script>
 window.addEventListener("contextmenu", e => e.preventDefault());
 </script>
