--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial scale=1.0">
 <link rel="icon" type="image/x-icon" href="https://thedoggybrad.github.io/getdatetime/resources/favicon.png">
 <title>What is my current date and time?</title>
- <meta name="color-scheme" content="dark light" />
+ <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="" />
 <link rel="manifest" href="pwa/manifest.json">
   <script src="pwa/service_worker_check.js"></script>
