--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
  <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="" />
 <link rel="manifest" href="pwa/manifest.json">
+<link rel="preload" href="resources/dark.css" as="style" />
+<link rel="preload" href="resources/light.css" as="style" />
+<link rel="preload" href="resources/dark-mode-toggle-playground.mjs" as="script" />
+<link rel="preload" href="resources/dark-mode-toggle.mjs" as="script" />
+<link rel="preload" href="slider.css" as="style" />
   <script src="pwa/service_worker_check.js"></script>
   <script src="pwa/service_worker_main.js"></script>
     <script>
