Implementation of JS Isolation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="preload" href="resources/light.css" as="style" />
 <link rel="preload" href="resources/dark-mode-toggle-playground.mjs" as="script" />
 <link rel="preload" href="resources/dark-mode-toggle.mjs" as="script" />
+<link rel="preload" href="script.js" as="script" />
 <link rel="preload" href="slider.css" as="style" />
   <script src="pwa/service_worker_check.js"></script>
   <script src="pwa/service_worker_main.js"></script>
@@ -40,36 +41,7 @@
     <link rel="stylesheet" href="https://thedoggybrad.github.io/getdatetime/resources/slider.css" />
     <script type="module" src="https://thedoggybrad.github.io/getdatetime/resources/dark-mode-toggle-playground.mjs"></script>
     <script type="module" src="https://thedoggybrad.github.io/getdatetime/resources/dark-mode-toggle.mjs"></script>
-<script>
-`use strict`;
-function refreshTime() {
-  const timeDisplay = document.getElementById("time");
-  const dateString = new Date().toLocaleTimeString();
-  const formattedString = dateString.replace(", ", " - ");
-  timeDisplay.textContent = formattedString;
-}
-  setInterval(refreshTime, 1000);
-</script>
-
-<script>
-`use strict`;
-function refreshTime() {
-  const timeDisplay = document.getElementById("date");
-  const dateString = new Date().toLocaleDateString();
-  const formattedString = dateString.replace(", ", " - ");
-  timeDisplay.textContent = formattedString;
-}
-  setInterval(refreshTime, 1000);
-</script>
-
-<script>
-const weekday = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"];
-
-const d = new Date();
-let day = weekday[d.getDay()];
-document.getElementById("day").innerHTML = day;
-  setInterval(refreshTime, 1000);
-</script>
+<script src="script.js"></script>
 </head>
 <body>
    <dark-mode-toggle
