--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <link rel="stylesheet" href="https://thedoggybrad.github.io/getdatetime/resources/slider.css" />
     <script type="module" src="https://thedoggybrad.github.io/getdatetime/resources/dark-mode-toggle-playground.mjs"></script>
     <script type="module" src="https://thedoggybrad.github.io/getdatetime/resources/dark-mode-toggle.mjs"></script>
-<script src="script.js"></script>
+<script src="time.js"></script>
+<script src="date.js"></script>
+<script src="day.js"></script>
 </head>
 <body>
    <dark-mode-toggle
