--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <title>What is my current date and time?</title>
  <meta name="color-scheme" content="dark light" />
     <meta name="theme-color" content="" />
+ <link rel="manifest" href="pwa/manifest.json">
+  <script src="pwa/service_worker_check.js"></script>
+  <script src="pwa/service_worker_main.js"></script>
     <script>
       // If `prefers-color-scheme` is not supported, fall back to light mode.
       // In this case, light.css will be downloaded with `highest` priority.
