--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
  <meta name="color-scheme" content="dark light" />
     <meta name="theme-color" content="" />
  <link rel="manifest" href="pwa/manifest.json">
+<link rel="preload" href="resources/dark.css" as="style" />
+<link rel="preload" href="resources/light.css" as="style" />
+<link rel="preload" href="resources/dark-mode-toggle-playground.mjs" as="script" />
+<link rel="preload" href="resources/dark-mode-toggle.mjs" as="script" />
+<link rel="preload" href="slider.css" as="style" />
     <script>
       // If `prefers-color-scheme` is not supported, fall back to light mode.
       // In this case, light.css will be downloaded with `highest` priority.
