--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         legend="Dark Mode"
         appearance="toggle"
       ></dark-mode-toggle>
+
+<style>
+.center {text-align: center}
+</style>
       
 <div class="center">
 <h1>What is my current date and time?</h1>
