Readded Forgotten Feature

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         class="slider"
         legend="Dark Mode"
         appearance="toggle"
+        remember="Remember this"
       ></dark-mode-toggle>
 
 <style>
