--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 .center {text-align: center}
 </style>
       
+<img src="resources/favicon.png" alt="LOGO" class="imgcenter" width="64"  height="64">
 <div class="center">
 <h1>What is my current date and time?</h1>
 
@@ -112,6 +113,13 @@ document.getElementById("day").innerHTML = day;
     -moz-user-select: -moz-none;
     -o-user-select: none;
     user-select: none;
+}
+.imgcenter {
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 64px;
+  height: 64px;
 }
 </style>
 
