--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 .center {text-align: center}
 </style>
       
-<img src="resources/favicon.png" alt="LOGO" class="imgcenter" width="64"  height="64">
+<div><img src="resources/favicon.png" alt="LOGO" class="imgcenter" width="64"  height="64"></div>
 <div class="center">
 <h1>What is my current date and time?</h1>
 
