--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@
 .center {text-align: center}
 </style>
       
+<style>
+.imgcenter {
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 64px;
+  height: 64px;
+}
+</style>
+
+<img src="resources/favicon.png" alt="LOGO" class="imgcenter" width="64"  height="64">
 <div class="center">
 <h1>What is my current date and time?</h1>
 
