--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ document.getElementById("day").innerHTML = day;
 <br>
 <br>
 <footer>
-  <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
+  <p>©<a href="https://github.com/thedoggybrad/">TheDoggyBrad Software Lab</a>. Provided under <a href="https://github.com/thedoggybrad/getdatetime/blob/main/License/">ISC License</a>. </p>
 </footer>
 </div>
  
